--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,8 +55,8 @@ jobs:
         
     - name: Run tests with coverage
       run: |
-        # Skip the problematic test files to avoid import errors
-        python -m pytest --cov=src --cov-report=xml --cov-report=term-missing -k "not test_events_processor and not test_patchers_anthropic"
+        # Run all tests with coverage reporting
+        python -m pytest --cov=src --cov-report=xml --cov-report=term-missing
       continue-on-error: true
         
     - name: Upload coverage to Codecov
