--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
     continue-on-error: true
     strategy:
       matrix:
-        python-version: ["3.11"]
+        python-version: ["3.12"]
 
     steps:
     - uses: actions/checkout@v4
@@ -22,6 +22,19 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
         
+    - name: Clean Python cache
+      run: |
+        echo "Cleaning Python cache files..."
+        find . -type d -name __pycache__ -exec rm -rf {} +
+        find . -type f -name "*.pyc" -delete
+        find . -type f -name "*.pyo" -delete
+        find . -type f -name "*.pyd" -delete
+        find . -type d -name ".pytest_cache" -exec rm -rf {} +
+        find . -type d -name ".coverage" -exec rm -rf {} +
+        find . -type d -name ".ruff_cache" -exec rm -rf {} +
+        find . -type d -name ".mypy_cache" -exec rm -rf {} +
+        echo "Cache cleanup complete"
+        
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -29,9 +42,6 @@ jobs:
         
         # Install the package with all dependencies
         python -m pip install -e ".[dev,test]"
-        
-        # Make the test runner executable
-        chmod +x tests/run_tests.py
         
     - name: Verify dependencies
       run: |
@@ -55,8 +65,8 @@ jobs:
         
     - name: Run tests with coverage
       run: |
-        # Run tests with our custom test runner that handles mocking and cleanup
-        python tests/run_tests.py --cov=src --cov-report=xml
+        # Run tests directly with pytest
+        python -m pytest -v --cov=src --cov-report=xml
         
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v4
@@ -76,7 +86,18 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
-        python-version: "3.11"
+        python-version: "3.12"
+        
+    - name: Clean Python cache
+      run: |
+        echo "Cleaning Python cache files..."
+        find . -type d -name __pycache__ -exec rm -rf {} +
+        find . -type f -name "*.pyc" -delete
+        find . -type f -name "*.pyo" -delete
+        find . -type f -name "*.pyd" -delete
+        find . -type d -name ".pytest_cache" -exec rm -rf {} +
+        find . -type d -name ".coverage" -exec rm -rf {} +
+        echo "Cache cleanup complete"
         
     - name: Install dependencies
       run: |
@@ -84,14 +105,11 @@ jobs:
         pip install -e ".[dev,test]"
         pip install pytest-asyncio
         
-        # Make the test runner executable
-        chmod +x tests/run_tests.py
-        
     - name: Run integration tests
       env:
         ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
       run: |
-        python tests/run_tests.py -m "integration"
+        python -m pytest -v -m "integration"
       continue-on-error: true
 
   security-scan:
@@ -126,7 +144,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
-        python-version: "3.11"
+        python-version: "3.12"
         
     - name: Install dependencies
       run: |
