--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,11 +51,20 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -e ".[dev,test]"
+          pip install -e ".[dev,test,security]"
           pip install safety bandit
       
-      - name: Simple security check
-        run: bandit -r src/ -ll || true
+      - name: Run security tests
+        run: |
+          pytest tests/test_security.py -v
+      
+      - name: Check for security vulnerabilities
+        run: |
+          safety check --full-report || echo "Warning: Security vulnerabilities found"
+      
+      - name: Run bandit security scan
+        run: |
+          bandit -r src/ -ll -iii || echo "Warning: Security issues found in code"
   
   publish:
     needs: verify
