--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,12 +16,13 @@ repos:
   #     - id: ruff
   #       args: [ --fix, --exit-non-zero-on-fix ]
 
-  # Security hooks - disabled temporarily
-  # - repo: https://github.com/PyCQA/bandit
-  #   rev: '1.7.7'
-  #   hooks:
-  #     - id: bandit
-  #       exclude: 'tests/.*$'
+  # Enable essential security hooks
+  - repo: https://github.com/PyCQA/bandit
+    rev: '1.7.7'
+    hooks:
+      - id: bandit
+        exclude: 'tests/.*$'
+        args: ['--severity-level', 'high']  # Focus on high severity only for MVP
 
   # Custom security hooks
   - repo: local
@@ -32,22 +33,16 @@ repos:
         language: system
         pass_filenames: false
 
-      - id: bandit
-        name: bandit
-        entry: python -c "print('Security checks disabled temporarily')"
-        language: system
-        pass_filenames: false
-
       - id: safety
         name: Safety dependency check
-        entry: python -c "print('Security checks disabled temporarily')"
+        entry: safety check
         language: system
         pass_filenames: false
         
-      # Local pre-push hook for security - completely disabled for MVP
+      # Local pre-push hook for security - enabled for basic checks
       - id: pre-push-security
         name: Pre-push security checks
-        entry: python -c "print('Security checks completely disabled for MVP release')"
+        entry: safety check --full-report
         language: system
         pass_filenames: false
-        stages: [manual]  # Change from push to manual to disable during push 
+        stages: [push] 
