feat: simplified CI/CD and test structure for MVP

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,12 @@
 [pytest]
+minversion = 8.0
+testpaths = ["tests/core_tests"]
+python_files = ["test_*.py"]
 asyncio_mode = strict
 asyncio_default_fixture_loop_scope = function
-asyncio_default_test_loop_scope = function 
+asyncio_default_test_loop_scope = function
+
+markers = [
+    "integration: marks tests as integration tests",
+    "security: marks tests that verify security requirements",
+] 
