chore: clean up test directory, keep only MVP essential tests

--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -1,17 +1,16 @@
 [pytest]
 minversion = 8.0
 addopts = -ra -q
-testpaths = tests
-python_files = test_*.py
-markers =
-    slow: marks tests as slow (deselect with '-m "not slow"')
-    integration: marks tests as integration tests (deselect with '-m "not integration"')
-    edge_case: marks tests as edge cases (deselect with '-m "not edge_case"')
-    non_critical: marks tests as non-critical (deselect with '-m "not non_critical"')
-    asyncio: marks tests as asyncio tests
-    security: marks tests as security tests (deselect with '-m "not security"')
-    requires_db: marks tests that require database functionality
-    requires_langchain: marks tests that require langchain to be properly installed
+testpaths = ["core_tests"]
+python_files = ["test_*.py"]
+asyncio_mode = strict
+asyncio_default_fixture_loop_scope = function
+asyncio_default_test_loop_scope = function
+
+markers = [
+    "integration: marks tests as integration tests",
+    "security: marks tests that verify security requirements",
+]
 
 # Disable warnings we know about but won't fix for MVP
 filterwarnings =
