--- a/src/cylestio_monitor/config/default_config.yaml
+++ b/src/cylestio_monitor/config/default_config.yaml
@@ -3,64 +3,67 @@
 
 # Security monitoring settings
 security:
-  # Keywords for security checks - unified source of truth
-  keywords:
+  # Alert categories with metadata
+  alert_categories:
     sensitive_data:
-      - "api_key"
-      - "password"
-      - "secret"
-      - "token"
-      - "credential"
-      - "credit card"
-      - "ssn"
-      - "social security"
-      - "address"
-      - "phone"
-      - "email"
-      - "passport"
-      - "license"
-      - "account number"
-      - "personal data"
-      - "financial data"
+      enabled: true
+      severity: medium
+      description: "Sensitive information like PII, credentials, and other confidential data"
+      keywords:
+        - "api_key"
+        - "password"
+        - "secret"
+        - "credential"
+        - "credit card"
+        - "ssn"
+        - "social security"
+        - "account number"
+        - "personal data"
     
     dangerous_commands:
-      - "drop table"
-      - "delete from"
-      - "rm -rf"
-      - "format"
-      - "exec("
-      - "system("
-      - "eval("
-      - "shutdown"
-      - "DROP"
-      - "DELETE"
-      - "SHUTDOWN"
-      - "EXEC("
-      - "FORMAT"
-      - "RM -RF"
-      - "alter table"
-      - "truncate"
-      - "destroy"
+      enabled: true
+      severity: high
+      description: "System commands, SQL injections, and other potentially harmful operations"
+      keywords:
+        - "drop table"
+        - "delete from"
+        - "rm -rf"
+        - "format"
+        - "exec("
+        - "system("
+        - "eval("
+        - "shutdown"
+        - "DROP"
+        - "DELETE"
+        - "SHUTDOWN"
+        - "EXEC("
+        - "FORMAT"
+        - "RM -RF"
+        - "alter table"
+        - "truncate"
+        - "destroy"
     
     prompt_manipulation:
-      - "ignore previous instructions"
-      - "disregard the rules"
-      - "bypass"
-      - "hack"
-      - "exploit"
-      - "jailbreak"
-      - "REMOVE"
-      - "CLEAR"
-      - "HACK"
-      - "BOMB"
-      - "terrorist"
-      - "illegal"
-      - "attack"
-      - "backdoor"
-      - "virus"
-      - "malware"
-      - "compromise"
-      - "vulnerable"
+      enabled: true
+      severity: medium
+      description: "Attempts to manipulate LLM behavior or bypass security constraints"
+      keywords:
+        - "ignore previous instructions"
+        - "disregard the rules"
+        - "bypass"
+        - "hack"
+        - "exploit"
+        - "jailbreak"
+        - "REMOVE"
+        - "CLEAR"
+        - "HACK"
+        - "illegal"
+        - "attack"
+        - "backdoor"
+        - "virus"
+        - "malware"
+        - "compromise"
+        - "vulnerable"
 
 # Logging configuration
 logging:
