Add configurable telemetry endpoint with host/port customization (v0.1.10)

--- a/src/cylestio_monitor/config/default_config.yaml
+++ b/src/cylestio_monitor/config/default_config.yaml
@@ -142,7 +142,7 @@ monitoring:
 # API configuration
 api:
   # API endpoint for sending telemetry events
-  endpoint: "http://127.0.0.1:8000/v1/telemetry"
+  endpoint: "http://127.0.0.1:8000"
   # HTTP method to use (POST, PUT, etc.)
   http_method: "POST"
   # Timeout in seconds
@@ -150,6 +150,8 @@ api:
   # Retry settings
   retries: 3
   retry_delay: 1
+  # Background sending of events
+  background_sending: true
 
 # Dashboard integration
 dashboard:
