--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,7 +62,10 @@ test = [
 ]
 security = [
     "bandit>=1.7.0",
-    "safety>=3.0.0",
+    "pip-audit>=2.7.0",
+    "detect-secrets>=1.4.0",
+    "semgrep>=1.48.0",
+    "pre-commit>=3.5.0",
     "sentence-transformers>=3.1.0",  # Fix for PVE-2024-73169
 ]
 
