--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,5 +21,5 @@ repos:
   rev: 1.8.3
   hooks:
   - id: bandit
-    args: ['-s', 'B110,B311,B404,B603,B112,B310,B324', '-r', 'src']
+    args: ['-s', 'B110,B311,B404,B603,B324', '-r', 'src', '--severity-level', 'medium', '--confidence-level', 'medium']
     exclude: 'tests/'
